# dirhashmake

./: .gitignore  Cargo.toml  LICENSE  Modelfile  README.md  session-ses_1ba7.md
src/: cli.rs  formatters.rs  hasher.rs  main.rs  output.rs  scanner.rs  types.rs
